Configuration changes and deletion of default views

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -27,13 +27,11 @@ play.i18n.langs = [ "en" ]
 
 # Database configuration
 # ~~~~~
-# You can declare as many datasources as you want.
-# By convention, the default datasource is named `default`
-#
-# db.default.driver=org.h2.Driver
-# db.default.url="jdbc:h2:mem:play"
-# db.default.username=sa
-# db.default.password=""
+slick.dbs.default.driver               = "slick.driver.PostgresDriver$"
+slick.dbs.default.db.properties.driver = "org.postgresql.Driver"
+slick.dbs.default.db.url="jdbc:postgresql://localhost:5432/hero_association_db"
+slick.dbs.default.db.user="luke"
+slick.dbs.default.db.password=""
 
 # Evolutions
 # ~~~~~
